--- a/layout.css
+++ b/layout.css
@@ -7,8 +7,8 @@ body{
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 40px 1fr 50px;
     grid-template-areas:
-    "header header header"
-    "sideBar content content"
+    "header header sideBar"
+    "content content content"
     "footer footer footer";
     min-height: 100vh;
 }
@@ -22,8 +22,16 @@ body{
     grid-area: sideBar;
 }
 .container main{
-    background-color: red;
+    display: grid;
     grid-area: content;
+    max-width: 400px;
+    grid-template-columns:  repeat(
+        auto-fill,
+        minmax(200px, 1fr)
+    );
+}
+img{
+    max-width: 100%;
 }
 
 .container footer{
